Updated copyright notice.